# soe-vinorm

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: releases.yml  ruff.yml  tests.yml
soe_vinorm/: __init__.py  cli.py  constants.py  normalizer.py  nsw_detector.py  nsw_expander.py  text_processor.py  utils.py
soe_vinorm/data/dictionaries/: abbreviations.txt  vietnamese-syllables.txt
soe_vinorm/data/models/nsw_detector/: crf.pkl
tests/: conftest.py  test_cli.py  test_detector.py  test_expander.py  test_normalizer.py  test_text_processor.py
