[project]
name = "soe-vinorm"
version = "0.1.0"
description = "A text normalization tool for Vietnamese"
authors = [{name = "Vinh Dang", email = "quangvinh0842@gmail.com"}]
requires-python = ">=3.8.16"
readme = "README.md"
license = "MIT"
license-files = ['LICENSE']
dependencies = [
    "unidecode>=1.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soe_vinorm"]

[tool.hatch.build.targets.wheel.sources]
"soe_vinorm" = "soe_vinorm"
