[project]
name = "soe-vinorm"
dynamic = ["version"]
description = "An effective text normalization tool for Vietnamese"
authors = [{name = "Vinh Dang", email = "quangvinh0842@gmail.com"}]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
license-files = ['LICENSE']
dependencies = [
    "huggingface-hub>=0.33.0,<1.0.0",
    "numpy>=1.20.0,<2.0.0",
    "onnxruntime>=1.16.0,<1.20.0",
    "sklearn-crfsuite>=0.3.6,<1.0.0",
    "tokenizers>=0.13.3,<0.21.0",
    "unidecode>=1.3.0,<2.0.0",
]
keywords = ["vietnamese", "text-normalization", "nlp", "tts", "speech", "non-standard-words"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Vietnamese",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/vinhdq842/soe-vinorm"
Documentation = "https://github.com/vinhdq842/soe-vinorm"
Issues = "https://github.com/vinhdq842/soe-vinorm/issues"
"Source Code" = "https://github.com/vinhdq842/soe-vinorm"

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "pytest",
    "ruff",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "soe_vinorm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["soe_vinorm"]

[tool.hatch.build.targets.wheel.sources]
"soe_vinorm" = "soe_vinorm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
